# TDMR_TSHI

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
configs/: baseline_2dmtr_8x2.yaml  baseline_mtr.yaml  baseline_uncoded.yaml  baseline_uncoded_soft.yaml  compare_three_families.yaml  concat_ldpc_1dmtr_highrate_k15_sector_pilot.yaml  concat_ldpc_1dmtr_highrate_k15_sector_snrscan_iti0.yaml  concat_ldpc_1dmtr_highrate_k15_sector_snrscan_iti02.yaml  concat_ldpc_1dmtr_highrate_k15_sector_snrscan_iti02_tail.yaml  concat_ldpc_1dmtr_highrate_k15_sector_snrscan_iti0_tail.yaml  concat_ldpc_2dmtr.yaml  concat_ldpc_2dmtr_bcjr.yaml  concat_ldpc_2dmtr_highrate_k15_eqpilot_bcjr1_iti02.yaml  concat_ldpc_2dmtr_highrate_k15_eqpilot_bcjr1_iti02_lowsnr_micro.yaml  concat_ldpc_2dmtr_highrate_k15_eqpilot_bcjr1_iti02_micro.yaml  concat_ldpc_2dmtr_highrate_k15_eqpilot_bcjr1_iti02_waterfall_100sector.yaml  concat_ldpc_2dmtr_highrate_k15_eqpilot_bcjr2_iti02_deepsnr_100sector.yaml  concat_ldpc_2dmtr_highrate_k15_eqpilot_bcjr2_iti02_deepsnr_micro.yaml  concat_ldpc_2dmtr_highrate_k15_eqpilot_bcjr2_iti02_lowsnr_micro.yaml  concat_ldpc_2dmtr_highrate_k15_eqpilot_bcjr2_iti02_micro.yaml  concat_ldpc_2dmtr_highrate_k15_eqpilot_bcjr2_iti02_tail_100sector.yaml  concat_ldpc_2dmtr_highrate_k15_eqpilot_bcjr2_iti02_waterfall_100sector.yaml  concat_ldpc_2dmtr_highrate_k15_eqpilot_soft_iti02.yaml  concat_ldpc_2dmtr_highrate_k15_sector_10k.yaml  concat_ldpc_2dmtr_highrate_k15_sector_pilot.yaml  concat_ldpc_2dmtr_highrate_k15_sector_snrscan_iti0.yaml  (+8 more)
(+29 files in other folders)
