[metadata]
name = tdmr2d
version = 0.1.0
description = Pre-ECC BER evaluation of 2D constrained codes over a simplified 2D TDMR readback channel
long_description = file: README.md
long_description_content_type = text/markdown
author = Rezent
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy>=1.24
    pyyaml>=6.0
    pandas>=2.0
    matplotlib>=3.7

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0

[options.entry_points]
console_scripts =
    tdmr2d = tdmr2d.cli:main
